[package]
name = "whatishedoing_learning_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
