[package]
name = "whatishedoing_learning_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
urlencoding = "2.1.2"
utoipa = "3.3.0"
utoipa-swagger-ui = "3.1.3"
warp = "0.3.4"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
